Tue May 05 12:25:20 GMT 2015  Olly Betts <olly@survex.com>

	* docs/encodings.rst: $prettyurl undoes %-encoding of UTF-8 in 1.2.21
	  and later too.

Tue May 05 01:40:17 GMT 2015  Olly Betts <olly@survex.com>

	* omega.cc: Drop compilation date and time from output - they prevent
	  reproducible builds and the version number is sufficient
	  information.

Fri May 01 09:36:27 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac,md5.h,values.h: Now we require C++11, just include
	  <cstdint> for uint32_t.

Fri May 01 09:02:34 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: For Sun's C++ compiler, -std=c++11 enables C++11
	  support, and is incompatible with -library=stlport, so remove code
	  to enable that later option.

Fri May 01 08:35:47 GMT 2015  Olly Betts <olly@survex.com>

	* commonhelp.cc,omega.cc,omindex-list.cc,omindex.cc,scriptindex.cc:
	  Add spaces between literal strings and macros which expand to
	  literal strings for C++11 compatibility.

Fri May 01 06:27:13 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac,m4/ax_cxx_compile_stdcxx_11.m4: Sync with xapian-core,
	  enabling C++11.

Fri May 01 01:38:08 GMT 2015  Olly Betts <olly@survex.com>

	* INSTALL: IRIX is past EOL so drop information about IRIX make.

Thu Apr 30 05:08:13 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am: Add common/stringutils.cc to urlenctest_SOURCES, needed
	  now urldecode.h uses C_isxdigit().

Thu Apr 30 02:56:08 GMT 2015  Olly Betts <olly@survex.com>

	* configfile.cc,htmlparse.cc,myhtmlparse.cc,omega.cc,omindex.cc,
	  query.cc,scriptindex.cc,urldecode.h: Consistently use C_isupper(),
	  C_toupper(), etc as these versions aren't affected by the locale
	  setting, and also allow signed char values (so we don't need to
	  cast the argument to unsigned char).

Wed Apr 15 01:12:33 GMT 2015  Olly Betts <olly@survex.com>

	* docs/cgiparams.rst,docs/omegascript.rst,omega.cc,query.cc: Fix
	  handling of multiple P.<prefix> fields - previously only the first